--- a/job_title.ipynb
+++ b/job_title.ipynb
@@ -2,22 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'openai'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m process_title\n",
-      "File \u001b[1;32md:\\Learn\\projects\\job_market_insights\\utils.py:8\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;66;03m# AI\u001b[39;00m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mast\u001b[39;00m\n\u001b[1;32m----> 8\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mopenai\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m OpenAI\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mdotenv\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m load_dotenv\n\u001b[0;32m     11\u001b[0m \u001b[38;5;66;03m# Natural Language Processing\u001b[39;00m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'openai'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from utils import process_title"
@@ -25,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +259,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +287,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +365,7 @@
        "4  4139567611  Senior Financial Analyst, Manufacturing"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +406,8 @@
        "      <th></th>\n",
        "      <th>job_id</th>\n",
        "      <th>job_title</th>\n",
-       "      <th>job_title</th>\n",
+       "      <th>job_title_clean</th>\n",
+       "      <th>job_title_level</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -427,34 +415,40 @@
        "      <th>0</th>\n",
        "      <td>4011206212</td>\n",
        "      <td>Senior Finance Analyst (SalonCentric)</td>\n",
-       "      <td>(Finance Analyst, Senior)</td>\n",
+       "      <td>Finance Analyst</td>\n",
+       "      <td>Senior</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>4139808430</td>\n",
        "      <td>Financial Analyst</td>\n",
-       "      <td>(Financial Analyst, None)</td>\n",
+       "      <td>Financial Analyst</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>4139561939</td>\n",
        "      <td>Financial Analyst</td>\n",
-       "      <td>(Financial Analyst, None)</td>\n",
+       "      <td>Financial Analyst</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>4139539110</td>\n",
        "      <td>Financial Analyst</td>\n",
-       "      <td>(Financial Analyst, None)</td>\n",
+       "      <td>Financial Analyst</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4139567611</td>\n",
        "      <td>Senior Financial Analyst, Manufacturing</td>\n",
-       "      <td>(Financial Analyst, Manufacturing, Senior)</td>\n",
+       "      <td>Financial Analyst, Manufacturing</td>\n",
+       "      <td>Senior</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -463,35 +457,40 @@
        "      <th>2534</th>\n",
        "      <td>4142860658</td>\n",
        "      <td>Key Private Bank Relationship Manager</td>\n",
-       "      <td>(Key Private Bank Relationship Manager, None)</td>\n",
+       "      <td>Key Private Bank Relationship Manager</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2535</th>\n",
        "      <td>4142862292</td>\n",
        "      <td>KPB Sr Relationship Manager</td>\n",
-       "      <td>(Kpb Relationship Manager, Senior)</td>\n",
+       "      <td>Kpb Relationship Manager</td>\n",
+       "      <td>Senior</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2536</th>\n",
        "      <td>4141196989</td>\n",
        "      <td>Client Services Representative</td>\n",
-       "      <td>(Client Services Representative, None)</td>\n",
+       "      <td>Client Services Representative</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2537</th>\n",
        "      <td>4143076900</td>\n",
        "      <td>Registered Client Associate</td>\n",
-       "      <td>(Registered Client Associate, None)</td>\n",
+       "      <td>Registered Client Associate</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2538</th>\n",
        "      <td>4143077861</td>\n",
        "      <td>RIA Business Development Director</td>\n",
-       "      <td>(Ria Business Development Director, None)</td>\n",
+       "      <td>Ria Business Development Director</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2539 rows × 3 columns</p>\n",
+       "<p>2539 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -508,62 +507,65 @@
        "2537  4143076900              Registered Client Associate   \n",
        "2538  4143077861        RIA Business Development Director   \n",
        "\n",
-       "                                          job_title  \n",
-       "0                         (Finance Analyst, Senior)  \n",
-       "1                         (Financial Analyst, None)  \n",
-       "2                         (Financial Analyst, None)  \n",
-       "3                         (Financial Analyst, None)  \n",
-       "4        (Financial Analyst, Manufacturing, Senior)  \n",
-       "...                                             ...  \n",
-       "2534  (Key Private Bank Relationship Manager, None)  \n",
-       "2535             (Kpb Relationship Manager, Senior)  \n",
-       "2536         (Client Services Representative, None)  \n",
-       "2537            (Registered Client Associate, None)  \n",
-       "2538      (Ria Business Development Director, None)  \n",
+       "                            job_title_clean job_title_level  \n",
+       "0                           Finance Analyst          Senior  \n",
+       "1                         Financial Analyst             NaN  \n",
+       "2                         Financial Analyst             NaN  \n",
+       "3                         Financial Analyst             NaN  \n",
+       "4          Financial Analyst, Manufacturing          Senior  \n",
+       "...                                     ...             ...  \n",
+       "2534  Key Private Bank Relationship Manager             NaN  \n",
+       "2535               Kpb Relationship Manager          Senior  \n",
+       "2536         Client Services Representative             NaN  \n",
+       "2537            Registered Client Associate             NaN  \n",
+       "2538      Ria Business Development Director             NaN  \n",
        "\n",
-       "[2539 rows x 3 columns]"
+       "[2539 rows x 4 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "clean_title = df_title['job_title'].apply(process_title)\n",
-    "df_title = pd.concat([df_title, clean_title], axis=1)\n",
-    "df_title"
+    "clean_title = df_title.apply(process_title, axis=1)\n",
+    "# df_title = pd.concat([df_title, clean_title], axis=1)\n",
+    "# df_title\n",
+    "clean_title"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0                           (Finance Analyst, Senior)\n",
-       "1                           (Financial Analyst, None)\n",
-       "2                           (Financial Analyst, None)\n",
-       "3                           (Financial Analyst, None)\n",
-       "4          (Financial Analyst, Manufacturing, Senior)\n",
-       "                            ...                      \n",
-       "2534    (Key Private Bank Relationship Manager, None)\n",
-       "2535               (Kpb Relationship Manager, Senior)\n",
-       "2536           (Client Services Representative, None)\n",
-       "2537              (Registered Client Associate, None)\n",
-       "2538        (Ria Business Development Director, None)\n",
-       "Name: job_title, Length: 2539, dtype: object"
+       "job_title_clean\n",
+       "Financial Analyst                                811\n",
+       "Financial Advisor                                 91\n",
+       "Financial Solutions Advisor                       47\n",
+       "Merrill Financial Solutions Advisor               45\n",
+       "Insurance Agent                                   40\n",
+       "                                                ... \n",
+       "Coordinator, Financial Planning And Analysis       1\n",
+       "Tax Strategist                                     1\n",
+       "Tax , Sustainability Credits                       1\n",
+       "Financial Services Tax Transformation Manager      1\n",
+       "Vice President, Hr Service Operations              1\n",
+       "Name: count, Length: 872, dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_title2"
+    "title_counts = clean_title['job_title_clean'].value_counts()\n",
+    "title_counts.to_csv('title_counts.csv', index=False)"
    ]
   }
  ],
